--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
+    "@clerk/nextjs": "^6.3.1",
     "antd": "^5.22.0",
     "next": "14.2.17",
     "react": "^18",
