--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^6.3.1",
     "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.22.0",
+    "mongoose": "^8.8.1",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
