--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2"
   },
