--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.0.1",
     "@clerk/nextjs": "^6.3.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "@vercel/blob": "^0.26.0",
     "antd": "^5.22.0",
     "cloudinary": "^2.5.1",
     "mongoose": "^8.8.1",
