--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your_next_public_clerk_publishable_key
 CLERK_SECRET_KEY=your_clerk_secret_key
 MONGODB_URI=your_mongodb_uri
+BLOB_READ_WRITE_TOKEN=your_blob_read_write_token
+NEXT_PUBLIC_BASE_URL=your_base_url
